Updated timeline and minor fix. One last figure to complete chap.3

--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -84,11 +84,11 @@
 \part{Mega Man X}
 
 \label{cha:X1}
-%\input{src/x1.tex}
+\input{src/x1.tex}
 
 \part[Mega Man X2]{Mega Man X2\\[2ex]\Large\itshape{VS X-Hunters}}
 \label{cha:X2}
-%\input{src/x2.tex}
+\input{src/x2.tex}
 	
 \part{Mega Man X3}
 \label{cha:X3}
@@ -121,8 +121,8 @@
 	}
 }
 
-%\input{src/character_X}
-%\input{src/character_Zero}	
+\input{src/character_X}
+\input{src/character_Zero}	
 \input{src/character_Sigma_and_Vile}
 \input{src/character_others}
 
@@ -137,7 +137,7 @@
 \input{src/timeline}
 
 \chapter{Damage Tables}
-%\input{src/tables}
+\input{src/tables}
 
 \bibliographystyle{IEEEtran} 
 \bibliography{bibliography}
