--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -10,7 +10,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 \section{Mini-Bosses}
 \begin{itemize}
 	\item \hypertarget{miniboss:Anglerge}{\textbf{Anglerge} (X1)}:
-	\enemSpecs{64 ($\sim$0.15 seconds of Iframe, Boomerang Cutter, Rolling Shield and Sting Chameleon hit for 8 damage) }{4 (contact), 2 (snakes)}{Angler-type mechaniloids that work to clean the seabed floor, with a motion sensor attached to its ``lantern'' part.}
+	\enemSpecs{64 ($\sim$0.15 seconds of Iframe, Boomerang Cutter, Rolling Shield and Sting Chameleon hit for 8 damage) }{4 (contact), 2 (snakes)}{Angler-type mechaniloids which works to clean the seabed. It has a motion sensor attached to its ``lantern'' part.}
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[height=3.5cm]{figures/X1/Enemies/Anglerge.jpg}
@@ -53,7 +53,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\end{figure}
 	\item 
 	\hypertarget{miniboss:Hotareeca}{\textbf{Hotareeca} (X3)}:
-	\enemSpecs{32 (no Iframes)}{2 (contact), 2 (missiles), 3 (mines)}{A mechaniloid built as a smaller version of Volt Kurageil. It is equipped with depth charges and homing missiles, but its tentacles can't seem to move together. Its low stamina makes it rather weak.}
+	\enemSpecs{32 (no Iframes)}{2 (contact), 2 (missiles), 3 (mines)}{A mechaniloid built to be a smaller version of Volt Kurageil. It is equipped with depth charges and homing missiles, but its tentacles can't seem to move together. Its low stamina makes it rather weak.}
 		\begin{figure}[htp]
 		\centering
 		\includegraphics[height=3.5cm]{figures/X3/Enemies/hotareeca.png}
@@ -116,7 +116,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\end{figure}
 
 	\item \hypertarget{miniboss:REX}{\textbf{REX-2000} (X3)}:
-	\enemSpecs{32 ($\sim$0.97 seconds of invincibility frames per hit)}{2 (bullets), 4 (missiles), 8 (contact)}{Mechaniloid tank developed as an improved D-REX (\ref{boss:D-rex}). The ability to walk has been added but, like the ride armors, an operator became necessary.}
+	\enemSpecs{32 ($\sim$0.97 seconds of invincibility frames per hit)}{2 (bullets), 4 (missiles), 8 (contact)}{Mechaniloid tank developed as an improved D-REX (\ref{boss:D-Rex}). The ability to walk has been added but, like the ride armors, an operator became necessary.}
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[height=3.5cm]{figures/X3/Enemies/rex2000.png}
@@ -313,7 +313,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\enemSpecs{2}{No damage}{Mechaniloid which uses magnetic force to suspend objects in mid-air.} 
 		
 	\item[{\includegraphics[height=20px]{figures/X3/Enemies/headgunnercustomer.png}}] \hypertarget{enem:Head_Gunner_customer}{\textbf{Head Gunner customer} (X3)}:
-	\enemSpecs{6, weak to Parasitic Bomb and Spinning Blade}{1 (projectiles), 6(contact)}{\hyperlink{enem:Head_Gunner}{Head Gunner} with cannons attached, as well as a stronger armor. Made from the parts produced in the weapons factory stage.}
+	\enemSpecs{6, weak to Parasitic Bomb and Spinning Blade}{1 (projectiles), 6(contact)}{\hyperlink{enem:Head_Gunner_masspro}{Head Gunner} with cannons attached, as well as a stronger armor. Made from the parts produced in the weapons factory stage.}
 	
 	\item[{\includegraphics[height=20px]{figures/X3/Enemies/headgunnermasspro.png}}] \hypertarget{enem:Head_Gunner_masspro}{\textbf{Head Gunner masspro} (X3)}:\enemSpecs{4, weak to Parasitic Bomb and Spinning Blade}{1 (projectiles), 4 (contact)}{Basic model \hyperlink{enem:Head_Gunner_customer}{Head Gunner} mechaniloid, equipped with 2 missile guns. It has legs attached, but cannot walk.}
 	
@@ -396,7 +396,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\enemSpecs{1 (on foot), 16 (with armor), weak to Silk Shot, Spin Wheel and Magnet Mine }{3 (contact), 4 (punch)}{Reploid soldier in training to use the RABBIT Ride Armor. Still undergoing training, he is not very strong.}
 	
 	\item[{\includegraphics[height=30px]{figures/X2/Enemies/sprite_Rightod.png}}] \hypertarget{enem:Rightod}{\textbf{Rightod} (X2)}:
-	\enemSpecs{1, weak to Sonic Slicer, Speed Burner and Bubble Splash}{4 (lightning)}{Hatched from the \emph{capsule weapon number one} released by \hyperlink{enem:Sky_Farmers}{Sky Farmers}. They fly and attach to the enemy, then attack by calling upon thunder.}
+	\enemSpecs{1, weak to Sonic Slicer, Speed Burner and Bubble Splash}{4 (lightning)}{Hatched from the \emph{capsule weapon number one} released by \hyperlink{enem:Sky_Farmer}{Sky Farmers}. They fly and attach to the enemy, then attack by calling upon thunder.}
 	
 	\item[{\includegraphics[width=30px]{figures/X1/Enemies/sprite_roadattacker.png}}] \hypertarget{enem:Road_Attackers}{\textbf{Road Attackers} (X1)}: 
 	\enemSpecs{12(total), at 7/12 the pilot dies; at 3/12 the engine explodes}{2 (contact), 1 (shot)}{A destructive reploid gang of hot-rodders, riding for Sigma's rebellion. Large beam cannons have been attached to the bonnets of their sports cars.}
@@ -431,7 +431,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_skyclaw.png}}] \hypertarget{enem:Sky_Claw}{\textbf{Sky Claw}  (X1)}:
 	\enemSpecs{2}{2 (contact), 3(self-destruct)}{A robot who removes obstacles, originally designed for the ``Crane Game'' which was popular in Japan during the later half of the twentieth century.}
 	
-	\item[{\includegraphics[height=30px]{figures/X2/Enemies/sprite_SkyFarmer.png}}] \hypertarget{enem:Sky_farmer}{\textbf{Sky Farmer} (X2)}:
+	\item[{\includegraphics[height=30px]{figures/X2/Enemies/sprite_SkyFarmer.png}}] \hypertarget{enem:Sky_Farmer}{\textbf{Sky Farmer} (X2)}:
 	\enemSpecs{2, weak to Sonic Slicer, Speed Burner and Bubble Splash }{1 (capsule weapon), 2 (contact)}{Mechaniloid made for sowing seeds from the air, remodeled to drop \emph{weapons capsule}.}
 	
 	\item[{\includegraphics[height=20px]{figures/X2/Enemies/sprite_slidame.png}}] \hypertarget{enem:Slidame}{\textbf{Slidame}  (X2)}:
@@ -444,7 +444,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\enemSpecs{4}{3 (contact), 2(snowball)}{Bad-natured mechaniloid who toss balls of white iron as if they were snowballs. They are Chill Penguin's guardians.}
 	
 	\item[{\includegraphics[height=20px]{figures/X3/Enemies/SnowRider.png}}] \hypertarget{enem:Snow_Rider}{\textbf{Snow Rider} (X3)}:
-	\enemSpecs{3}{2 (laser), 3 (contact)}{Mechaniloid specializes in snowfield activity. Its shooting prowess is top-rank.}
+	\enemSpecs{3}{2 (laser), 3 (contact)}{Mechaniloid specialized for snowfield activity. Its shooting prowess is top-rank.}
 	
 	\item[{\includegraphics[width=30px]{figures/X3/Enemies/SnowSlider.png}}] \hypertarget{enem:Snow_Slider}{\textbf{Snow Slider} (X3)}:
 	\enemSpecs{3, spawn a \hyperlink{enem:Snow_Rider}{Snow Rider} when destroyed}{0 (ice trail), 3 (contact)}{Snowmobile ridden by Snow Riders, allowing to travel over the snowfields at high speeds.} 
