--- a/src/timeline.tex
+++ b/src/timeline.tex
@@ -97,7 +97,8 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabline& $\cdot$ Vile attacks X on the highway, but Zero's intervention forces him to retreat. In the battle his ride armor is damaged.\\
 	\tabdot& Zero entrusts X with dealing with the eight mavericks. Meanwhile he starts searching for Sigma's hideout.\\
 	\tabdot& Magna Centipede is captured by the Mavericks, and brainwashed into a loyal soldier.\\
-	\tabdot& X manages to defeat all eight mavericks that were threatening Abel city. In the meanwhile he also find capsules from which Dr.~Light AI gives him first armor pieces, now completed.\\
+	\tabdot& X manages to defeat all eight mavericks that were threatening Abel city. In the meanwhile he also find capsules from which Dr.~Light AI gives him the first armor pieces.\\
+	\timemoment{Gravity Beetle swears revenge against X for his brother's (Boomer Kuwanger) death.}
 	\tabdot& Vile repairs and upgrades his ride armor, while also setting up a plan to take down both Zero and X.\\
 	\tabline& $\cdot$ Sigma recovers defeated mavericks' dead bodies and resurrect them as an additional line of defense for his fortress.\\
 	\tabdot& Zero finds Sigma's hideout, and ask X to reach him to begin the final assault.\\
@@ -118,7 +119,7 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabdot& X is appointed leader of the 17th Elite Unit.\\
 	\tabdot& Zero's control circuit is retrieved by the Maverick Hunters form the remaining of Sigma's fortress\\
 	\tabdot& The X-Hunters, led by Serges, emerge from the shadows and take control of Sigma's army.\\
-	\timepoint{Zero's body remains are retrieved by the maverick forces. Serges begins its reconstruction.}
+	\timepoint{Zero's body remains are retrieved by the maverick forces. Serges begins its reconstruction. In the same occasion, Vile's remains are also retrieved.}
 	\tabdot& To increase the size of their army, the X-Hunters set up different factories to mass-produce Mavericks.\\
 	\tabline& In one of these factories, Wire Sponge is created. Despite his childish attitude, he is enrolled in the mavericks army due his strength.\\
 	\tabdot& The X-Hunters retrieve the remains of Zero's body and Serges begins its reparations.\\
@@ -158,5 +159,68 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\timepoint{X meet with Sigma at the Central Computer. Sigma uses the Zero replica to attack X, but the real Zero arrives and destroys his copy.}
 	\timemoment{Zero proceeds to destroy the main computer.}
 	\timemoment{X and Sigma clashes. X destroys Sigma's new body.}
-	\timemoment{Sigma assumes his true form of virus, and materializes to try killing X. X however manages to defeat him and force Sigma to flee.}
+	\timemoment{Sigma assumes his true form of a virus, and materializes to try killing X. X however manages to defeat him and forces Sigma to flee.}
+	%%
+	% X2-X3
+	%%
+	\rowcolor{Aquamarine}
+	\multicolumn{2}{c}{\textbf{Between X2 and X3}}\\
+	\addlinespace[1.5ex]
+	\timepoint{X return the Second Armor to Dr.~Light's capsules, which proceed to upgrade it.}
+	\timepoint{The Maverick Hunters proceed to develop a new version of Ride Armor, the DRA-00, which can change form depending on the installed module.}
+	\timepoint{The Maverick Hunters keep fighting the mavericks. The rebellion seems to head towards its end, but mavericks keep appearing.}
+	\timepoint{Reploid scientist Dr.~Doppler discovers the cause of the maverick behavior in a computer virus he names ``Sigma Virus''.}
+	\timepoint{Doppler develops a counter-measure\footnote{Depending on the source, this could be a vaccine, a cure or a suppression mechanism.} for the virus, returning infected reploids to normal.}
+	\timepoint{Reploids saved by Doppler gather around him. Humans join too, and thus Doppler Town is founded.}
+	\timepoint{Doppler Town is completed, and it appears to be a perfect Utopian community between reploids and humans.}
+	\midrule
+	\timepoint{While researching the Sigma Virus, Doppler is infected, and falls under Sigma's command.}
+	\timepoint{Doppler begins developing his own army.}
+	\timemoment{Vile's remains reach Doppler, who rebuild Vile ad Vile mk-2. In the process, Vile is also infected with the virus, making him obsessed with revenge.}
+	\timemoment{Doppler builds Bit and Byte, and creates the Nightmare Police.}
+	\timemoment{In a secret laboratory, Toxic Seahorse is created.}
+	\timemoment{Someone, presumably Doppler or someone under his orders, reaches and awakens Crush Crawfish, who was forgotten inside the warehouse he was sealed.}
+	\timepoint{Doppler invites to Doppler Town several famous reploids.}
+	\timemoment{Zero refuses the invitation, since he is training. He sends his second-in-command, Blast Hornet instead.}
+	\timemoment{Tunnel Rhino accepts the invitation to showcase his mining skills.}
+	\timepoint{Doppler put his plan in motion. The countermeasure he developed turned out to be a placebo. Cured reploids returns maverick, and a new wave of virus spreads in Doppler town, brainwashing reploids to be Doppler's \textit{Doppler Incident}.}
+	\timemoment{Blast Hornet, Blizzard Buffalo, Volt Catfish, Neon Tiger, Tunnel Rhino and maverick hunter Mac are all infected.}
+	\timepoint{Infected mavericks begin rioting under Doppler's orders.}
+	\timemoment{Blast Hornet is sent to guard a weapon factory and warehouse.}
+	\timemoment{Blizzard Buffalo becomes incredibly aggressive, freezing a portion of Doppler Town with his powers.}
+	\timemoment{Toxic seahorse is sent by Doppler to conquer the Monarch Dam, to cut off Doppler's town water supply.}
+	\timemoment{Volt Catfish, under Doppler's orders, seize Doppler's Town power plant, to redirect the electricity towards Doppler's facilities. In the process, he absorb an excessive amount of electrical power which drives him berserk.}
+	\timemoment{Free again, Crush Crawfish hides in a shipyard and steals a submarine. There, he proceeds to attack and mangle anyone who draws near.}
+	\timemoment{Similarly to Crawfish, Tunnel Rhino hides in a quarry, and attacks everyone who comes close.}
+	\timemoment{Neon Tiger returns to the safari park he guarded. No other information are given on what he does there.}
+	\timemoment{Mac returns to the Maverick Hunters HQ to work as an inside agent.}
+	\timepoint{Seeing the rebellion as the chance to get his revenge, Gravity Beetle hijacks a Maverick Hunters' transport unit and flee to Doppler Town.}
+	\timepoint{Beetle joins Doppler's army. The transport unit he stole is converted into an aerial fortress to move weapons.}
+	\timepoint{Doppler begins collecting data about the infected reploids and starts building the \textit{ultimate battle body} for Sigma.}
+	\timemoment{Simultaneously, Doppler also upgrade his body for combat.}
+	%%
+	% X3
+	%%
+	\rowcolor{Aquamarine}
+	\multicolumn{2}{c}{\textbf{Mega Man X3 - The Doppler Incident}}\\
+	\addlinespace[1.5ex]
+	\timepoint{X and Zero are dispatched to Doppler Town to stop the rebellion and capture Doppler.}
+	\timepoint{Doppler plays in advance, and sends his troop to strike the Maverick Hunters HQ. All hunter are recalled to defend their base, X and Zero included.}
+	\timemoment{During the assault, Mac betrays and capture X, but is later killed by Zero, who saves his friend.}
+	\timemoment{Maverick hunters repels Doppler's attack. X and Zero returns to Doppler Town to complete their mission.}
+	\timepoint{X and Zero proceed facing Doppler's maverick. Doppler decides to send the Nightmare Police and Vile to pursue X as a backup plan.}
+	\timemoment{Vile ignores Doppler's orders, and set up a trap by mining an abandoned factory, and waiting for X.}
+	\timepoint{X faces Vile mk-2 and win, even escaping the bombs Vile ha planted. Vile retreats within Doppler's laboratory and begins working on his next move.}
+	\timepoint{Vile builds his new Ride Armor, the \textit{Goliath/Brown Bear}.}
+	\timepoint{Using the D-Rex as template, scientists develop the Rex-2000 ride armor.}
+	\timepoint{X and Zero stop all Doppler's mavericks, Bit and Byte included. By analyzing mavericks' control chip, Dr.~Cain discovers the location of Doppler's laboratory and also Doppler's plan to build a new body for Sigma.}
+	\timemoment{At the same time, X obtains from Light's capsules the third armor.}
+	\timepoint{X and Zero storms Doppler's laboratory, where they face the fused form of Bit and Byte, Godkarmachine o Inary, and the press disposer, one last desperate line of defense.}
+	\timepoint{X and Vile mk-2 have their last confrontation. X wins again, and Vile is killed once more.}
+	\timepoint{X faces Doppler and manages to bring the doctor back to his sense. To atone for his evil actions, Doppler indicates X where Sigma is hiding.}
+	\timepoint{X and Zero splits. Zero aims to destroy the laboratory's power generator, while X faces Sigma.}
+	\timemoment{X and Sigma clashes once more. Despite his upgraded body, Sigma is no match for X, and his body is destroyed one more time.}
+	\timepoint{In a last attempt to claim victory, Sigma enters in his viral form and corner X, in an attempt to possess his body.}
+	\timemoment{Zero/Doppler appears, and saves X by using a vaccine onto Sigma, who disappears.}
+	\timepoint{X and Zero teleport outside as the laboratory begins to collapse. Doppler remains inside and dies as price for the evil he had committed.}
 \end{tabularx}
