--- a/src/x1.tex
+++ b/src/x1.tex
@@ -1296,7 +1296,7 @@ Enemies present in the stage are following~\cite{wiki:sigma_stages}:
 	\item \hyperlink {enem:Turn_Cannon}{Turn Cannon}
 \end{itemize}
 
-\subsection{Vile}\label{boss:vile}
+\subsection{Vile}\label{boss:Vile}
 \begin{figure}[htp]
 	\centering
 	\includegraphics[height=3.9cm]{figures/X1/Sigma_stages/VileRideArmor.jpg}
@@ -1491,7 +1491,7 @@ Enemies that appears in the stage are followings~\cite{wiki:sigma_stages}:
 	\item \hyperlink{enem:Ray_Trap}{Ray Trap}
 \end{itemize} 
 
-\subsection{D-REX}
+\subsection{D-REX}\label{boss:D-Rex}
 \begin{figure}[htp]
 	\centering
 	\includegraphics[height=\portraitsize]{figures/X1/Sigma_stages/Drex.jpg}
