--- a/src/x2.tex
+++ b/src/x2.tex
@@ -441,11 +441,11 @@ The first stage the game presents is the weather control stage. As the name sugg
 	\caption{Different states of weather condition and crystals.}
 \end{figure}
 \begin{itemize}
-\item \textbf{Cloudy Weather}: Induced by employing the Strike Chain weapon on the crystal (causing it to turn yellow). During this state, all enemies are active and \hyperlink{enem:Sky_farmer}{Sky farmers} will sow \hyperlink{enem:Sabottein}{sabotteins} that grow to half their maximum size.
+\item \textbf{Cloudy Weather}: Induced by employing the Strike Chain weapon on the crystal (causing it to turn yellow). During this state, all enemies are active and \hyperlink{enem:Sky_Farmer}{Sky farmers} will sow \hyperlink{enem:Sabottein}{sabotteins} that grow to half their maximum size.
 
 \item \textbf{Warm/Sunny Weather}: Triggered by employing the Speed Burner on the crystal (causing it to turn orange). All enemies remain active, but \hyperlink{enem:Croak_hopper}{croak hoppers} overheat and explode, while planted \hyperlink{enem:Sabottein}{sabotteins} reach full growth.
 
-\item \textbf{Rainy Weather}: Initiated by utilizing the Bubble Splash on the crystal (causing it to turn cyan). During this state, \hyperlink{enem:Croak_hopper}{croak hoppers} actively move across the stage instead of remaining stationary, \hyperlink{enem:Sky_farmer}{Sky farmers} release \hyperlink{enem:Rightod}{rightods} to pursue X, and \hyperlink{enem:Sole_solar}{sole solars} are rendered inactive. Rainy weather also calls up wind to oppose X's movements, resulting in slower walking, running, and reduced jump distances.
+\item \textbf{Rainy Weather}: Initiated by utilizing the Bubble Splash on the crystal (causing it to turn cyan). During this state, \hyperlink{enem:Croak_hopper}{croak hoppers} actively move across the stage instead of remaining stationary, \hyperlink{enem:Sky_Farmer}{Sky farmers} release \hyperlink{enem:Rightod}{rightods} to pursue X, and \hyperlink{enem:Sole_solar}{sole solars} are rendered inactive. Rainy weather also calls up wind to oppose X's movements, resulting in slower walking, running, and reduced jump distances.
 
 \item \textbf{Foggy Weather}: Achieved by utilizing the Crystal Hunter on the crystal (causing it to turn purple/black). All enemies are deactivated in this state.
 \end{itemize}
@@ -461,7 +461,7 @@ Following enemies occupy the stage~\cite{wiki:weather_control}
 	\item \hyperlink{enem:Rightod}{Rightod}
 	\item \hyperlink{enem:Sabottein}{Sabottein}
 	\item \hyperlink{enem:Scriver}{Scriver}
-	\item \hyperlink{enem:Sky_farmer}{Sky Farmer}
+	\item \hyperlink{enem:Sky_Farmer}{Sky Farmer}
 	\item \hyperlink{enem:Sole_solar}{Sole Solar}
 	\item \hyperlink{enem:Weather_crystal}{Weather Crystal}
 \end{itemize}
@@ -1535,7 +1535,7 @@ Serges' primary strength lay in his intellect and thought program, reputed to su
 
 Serges' boss battles differ significantly between his first and second encounters. Here both of these battles will be examined.
 
-In their first encounter, Serges faces the player while atop his floating pedestal. At the start of the battle he discards his cape which which, despite not immediately apparent, serves as a projectile capable of damaging the player (for one point of health) and instantly charging the Giga Crush Bar, regardless of its current level.
+In his first encounter, Serges faces the player while atop his floating pedestal. At the start of the battle he discards his cape which which, despite not immediately apparent, serves as a projectile capable of damaging the player (for one point of health) and instantly charging the Giga Crush Bar, regardless of its current level.
  \begin{figure}[htp]
 	\centering
 	\begin{minipage}{.45\linewidth}
