--- a/src/x3.tex
+++ b/src/x3.tex
@@ -87,7 +87,7 @@ This weapon also posses the useful ability to guarantee weapon energy drop when 
 	\item \hyperlink{enem:Notor_Banger}{Notor Banger}
 	\item \hyperlink{enem:Tombort}{Tombort}
 	\item \hyperlink{enem:Victoroid}{Victoroid} \& \hyperlink{enem:Victoroid_customer}{Victoroid customer}
-	\item \hyperlink{enem:Walk Blaster}{Walk Blaster}
+	\item \hyperlink{enem:Walk_Blaster}{Walk Blaster}
 \end{itemize}
 
 To obtain the Acid Burst X as first do fight and defeat Toxic Seahorse (\ref{boss:Toxic_seahorse}) in his stage.
@@ -798,7 +798,7 @@ Immediately before the last climb to the boss room, players can find two crates 
 	\caption{Gravity Beetle's artwork~\cite{book:MMX_Complete_art}}
 \end{figure}
 
-Once a devoted member of the 17th Elite Unit of the Maverick Hunters, Gravity Beetle's life took a dramatic turn during the initial Maverick uprising when his brother and fellow comrade, Boomer Kuwanger~\ref{boss:Boomer_kuwanger}, was slain by the hand of X. The exact nature of their relationship remains unclear: in~\cite{book:Compendium}, he is described as the younger sibling, in~\cite{wayback:X3_resources}, he is portrayed as the elder, and in~\cite{Xcoll1:Manual_X3}, there is no mention of them being related at all. Seeking retribution for his brother, an act that earned him the title of \textit{Steel Revenger}~\cite{book:MMX_Complete_art}, Beetle deserted the Maverick Hunters, to align himself with Doppler's rebellion. He hijacked a transport unit from the Maverick Hunter HQ and converted it into an airborne fortress, employing it to launch aerial assaults and transport weapon supplies\cite{Xcoll1:Manual_X3,wayback:X3_resources,wiki:Gravity_beetle}.
+Once a devoted member of the 17th Elite Unit of the Maverick Hunters, Gravity Beetle's life took a dramatic turn during the initial Maverick uprising when his brother and fellow comrade, Boomer Kuwanger~\ref{boss:Boomer_Kuwanger}, was slain by the hand of X. The exact nature of their relationship remains unclear: in~\cite{book:Compendium}, he is described as the younger sibling, in~\cite{wayback:X3_resources}, he is portrayed as the elder, and in~\cite{Xcoll1:Manual_X3}, there is no mention of them being related at all. Seeking retribution for his brother, an act that earned him the title of \textit{Steel Revenger}~\cite{book:MMX_Complete_art}, Beetle deserted the Maverick Hunters, to align himself with Doppler's rebellion. He hijacked a transport unit from the Maverick Hunter HQ and converted it into an airborne fortress, employing it to launch aerial assaults and transport weapon supplies\cite{Xcoll1:Manual_X3,wayback:X3_resources,wiki:Gravity_beetle}.
  
 Initially, battling against Gravity Beetle may appear straightforward, given the boss's slow movement and limited arsenal of three attacks, all of which are reasonably avoidable. However, the true challenge lies in the power of these strikes. Among the eight primary bosses, in fact, Beetle's attacks are the one which inflict the most amount damages, making even a few hits potentially lethal.
 
@@ -1094,7 +1094,7 @@ Figure~\ref{fig:Shipyard_map} show scan performed from the Head parts, while fol
 	\item \hyperlink{enem:Hamma_Hamma}{Hamma Hamma}
 	\item \hyperlink{enem:Helit}{Helit}
 	\item \hyperlink{enem:Walk_Blaster}{Walk Blaster}
-	\item \hyperlink{enem:Wall_cancer}{Wall Cancer}
+	\item \hyperlink{enem:Wall_Cancer}{Wall Cancer}
 \end{itemize}
 
 \begin{figure}[htp]
@@ -1943,7 +1943,7 @@ Following enemies populates this stage~\cite{wiki:Doppler_stage}:
 \begin{itemize}
 	\item \hyperlink{enem:Trapper}{Trapper}
 	\item \hyperlink{enem:Wall_Cancer}{Wall Cancer}
-	\item \hyperlink{enem:Walk_Blaster}Walk Blaster{}
+	\item \hyperlink{enem:Walk_Blaster}{Walk Blaster}
 \end{itemize}
 
 \subsection{Dr.~Doppler}\label{boss:Doppler} 
